Added obligitory thank you slide

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -148,6 +148,9 @@
                     <li>Cookie security</li>
                 </ul>
             </section>
+            <section>
+                <h2>Thanks!</h2>
+            </section>
         </div>
     </div>
 
