--- a/presentation/index.html
+++ b/presentation/index.html
@@ -107,7 +107,7 @@
                 <ul>
                     <li>Determines cipher suite to use</li>
                     <li>Authenticates the server (optionally, the client as well)</li>
-                    <li>Establishes and shares session key information</li>
+                    <li>Establishes and shares session key information (cipher suite and secret)</li>
                 </ul>
             </section>
             <section style="height: 100%">
