Removed redundancy and added to readme

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -107,7 +107,7 @@
                 <ul>
                     <li>Determines cipher suite to use</li>
                     <li>Authenticates the server (optionally, the client as well)</li>
-                    <li>Establishes and shares session key information (cipher suite and secret)</li>
+                    <li>Establishes and shares session key information</li>
                 </ul>
             </section>
             <section style="height: 100%">
@@ -134,8 +134,7 @@
                 <h3>TLS Options</h3>
                 <ul>
                     <li>TLS version</li>
-                    <li>Cipher suite</li>
-                    <li>Algorithm</li>
+                    <li>Cipher suite/algorithm</li>
                 </ul>
             </section>
             <section>
